--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
     "builds": [{
       "src": "keypoint_project/wsgi.py",
       "use": "@vercel/python",
-      "config": {"maxLambdaSize": "15mb", "runtime": "python3.12.4", "installCommand": "./build.sh"}
+      "config": {
+        "maxLambdaSize": "15mb", 
+        "runtime": "python3.12.4", 
+        "buildCommand": "./build.sh"
+      }
     }],
     "routes": [
       {
