--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "config": {
         "maxLambdaSize": "15mb", 
         "runtime": "python3.12.4", 
-        "buildCommand": "python manage.py collectstatic --noinput"
+        "buildCommand": "sh build.sh"
       }
     }],
     "routes": [
