Vercel.json update

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "buildCommand": "sh vercel.sh", 
     "builds": [{
       "src": "keypoint_project/wsgi.py",
       "use": "@vercel/python",
@@ -13,8 +14,4 @@
         "dest": "keypoint_project/wsgi.py"
       }
     ]
-}
-
-{
-    "buildCommand": "sh vercel.sh"
 }
