--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,29 @@
 {
-    "builds": [{
-      "src": "keypoint_project/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb", 
-        "runtime": "python3.12.4"
-      }
-    }],
+    "builds": [
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": { 
+                "distDir": "staticfiles" 
+            }
+        },
+        {
+            "src": "keypoint_project/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb", 
+                "runtime": "python3.12.4"
+            }
+        }
+    ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "keypoint_project/wsgi.py"
-      }
+        {
+            "src": "/static/(.*)",
+            "dest": "staticfiles/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "keypoint_project/wsgi.py"
+        }
     ]
 }
