--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,21 @@
       {
         "src": "keypoint_project/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.10.0" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles"
-        }
+        "use": "@vercel/static"
       }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "staticfiles/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "keypoint_project/wsgi.py"
-        }
+      {
+        "src": "/staticfiles/(.*)",
+        "dest": "/staticfiles/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "keypoint_project/wsgi.py"
+      }
     ]
   }
