--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
     ],
     "routes": [
       {
-        "src": "/staticfiles/(.*)",
-        "dest": "/staticfiles/$1"
+        "src": "/static/(.*)",
+        "dest": "staticfiles/$1"
       },
       {
         "src": "/(.*)",
