--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       },
       {
         "src": "build.sh",
-        "use": "@vercel/static"
+        "use": "@vercel/static-build"
       }
     ],
     "routes": [
